--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "nuxt-icon": "^0.5.0",
     "nuxt-lodash": "^2.5.3",
     "sass": "^1.69.4",
+    "typescript": "^5.2.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.22"
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0",
     "@nuxtjs/ngrok": "^2.0.0",
+    "@pinia/nuxt": "^0.5.1",
     "@vueuse/components": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "ngrok": "^5.0.0-beta.2",
-    "nuxt-swiper": "^1.2.2"
+    "nuxt-swiper": "^1.2.2",
+    "object-to-formdata": "^4.5.1",
+    "pinia": "^2.1.7"
   }
 }
